--- a/style.css
+++ b/style.css
@@ -344,15 +344,41 @@ opacity:1;
 
 .child1 { 
     width: 50%; 
-    height: 60vh; 
+    /* height: 60vh;  */
     background-color: rgb(255, 255, 255); 
     text-align: right; 
     color: rgb(131, 131, 131); 
-    margin-right: 20px;
+    margin-right: 30px;
 } 
 
 .child2 { 
     width: 50%; 
     color: rgb(131, 131, 131); 
-    height: 60vh; 
+    /* height: 60vh;  */
 } 
+@media screen and (max-width: 1500px) {
+    .child1{
+      width: 100%;
+    }
+    .child2{
+        width: 100%;
+      }
+      .Parent { 
+        display: flex; 
+        padding:5%;
+        flex-direction: column; 
+        margin-bottom: 5%;
+        margin-top: 10%;
+    } 
+    /* .Parent .child1 img{
+        width: 500px;
+    } */
+  }
+  @media screen and (max-width: 600px) {
+.div6{
+    margin-top: 100px;
+}
+.view{
+    margin-top: 10%;
+}
+  }
